[package]
name = "soundcloud-fs"
version = "0.1.0"
authors = ["polyfloyd <floyd@polyfloyd.net>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
fuse = "0.3"
id3 = "0.3"
lazy_static = "1"
libc = "0.2"
log = "0.4"
nix = "0.14"
rayon = "1.0.3"
regex = "1.0.6"
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
