[package]
name = "soundcloud-fs"
version = "0.2.0"
authors = ["polyfloyd <floyd@polyfloyd.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/polyfloyd/soundcloud-fs"
description = "FUSE driver for SoundCloud"
keywords = ["soundcloud", "fuse"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
chrono = "0.4"
clap = "2"
env_logger = "0.7"
fuse = "0.3"
id3 = "0.5"
lazy_static = "1"
libc = "0.2"
log = "0.4"
nix = "0.16"
rayon = "1"
regex = "1"
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
serde = "1"
serde_derive = "1"
serde_json = "1"
time = "0.1"
url = "2"
