[package]
name = "soundcloud"
version = "0.1.0"
authors = ["polyfloyd <floyd@polyfloyd.net>"]

[dependencies]
chrono = "0.4.6"
failure = "0.1.3"
failure_derive = "0.1.3"
id3 = "0.2.5"
lazy_static = "1.2.0"
log = "0.4.6"
regex = "1.0.6"
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
